some conceptual features

--- a/web_external/templates/layout/headerView.pug
+++ b/web_external/templates/layout/headerView.pug
@@ -1,6 +1,6 @@
 .v-header-wrapper
   .v-logo-wrapper
-    img(src=`${staticRoot}/built/plugins/vaui/${logoImage}`)
+    | VPview Web
   .v-current-user-text
   .v-current-user-wrapper
     if (user)
