Some mockup features

--- a/web_external/stylesheets/body/trackAttributeView.styl
+++ b/web_external/stylesheets/body/trackAttributeView.styl
@@ -8,3 +8,11 @@
 
   .panel-body
     flex 1
+
+  ul
+    list-style none
+    padding-left 20px
+
+    .checkbox
+      margin-top 2px
+      margin-bottom 2px
