--- a/web_external/stylesheets/body/treeView.styl
+++ b/web_external/stylesheets/body/treeView.styl
@@ -7,4 +7,15 @@
     flex-direction column
 
   .panel-body
-    flex 1
+    overflow-y scroll
+
+  .nav.nav-tabs li a
+    padding 2px 5px
+
+  ul.item-list
+    list-style none
+    padding-left 40px
+
+    .checkbox
+      margin-top 3px
+      margin-bottom 3px
