Switch to use large image plugin and add frame skipping feature
For the initial demo, we want to use just frame based playback

--- a/web_external/Viewer/style.styl
+++ b/web_external/Viewer/style.styl
@@ -26,6 +26,10 @@
       > button
         flex 1
 
+        i
+          position relative
+          top -2px
+
       .reverse
         .icon-play
           &::before
