--- a/web_external/IndexView/style.styl
+++ b/web_external/IndexView/style.styl
@@ -1,16 +1,17 @@
-.v-header
-  height 30px
+.app
+  display flex
+  flex-direction column
 
 .v-index
-  margin-top 30px
-  height calc(100% - 30px)
+  height 100%
+  flex 1
   display flex
   flex-flow row
 
   .left-sidebar
     width 320px
     padding 1px
-  
+
   .main
     flex 1
     padding 1px
@@ -20,12 +21,39 @@
     padding 1px
 
 .panel
-  border-radius 2px
+  border-radius 3px
 
   .panel-heading
-    padding 7px 10px
-    border-radius 2px
+    padding 0.3em 0.5em
+    border-radius 3px 3px 0 0
     cursor default
+    text-align center
 
   .panel-body
-    padding 7px 10px
+    padding 3px
+
+  .nav.nav-tabs
+    width 100%
+    display table
+    border none
+
+    > li
+      display table-cell
+      text-align center
+      white-space nowrap
+      margin initial
+      float none
+
+      > a
+        padding 0 0.5em
+        border none
+
+    > li:not(:first-child)
+      border-left 1px solid #ddd
+
+    > li:not(.active)
+      opacity 0.6
+
+    li.active > a
+        background none
+        border-radius 3px
