--- a/web_external/TreeView/style.styl
+++ b/web_external/TreeView/style.styl
@@ -7,10 +7,17 @@
     flex-direction column
 
   .panel-body
-    overflow-y scroll
+    position relative
+    height 100%
+    flex 1
 
-  .nav.nav-tabs li a
-    padding 2px 3px
+  .tab-content
+    position absolute
+    top 3px
+    left 3px
+    right 3px
+    bottom 3px
+    overflow-y scroll
 
   ul.item-list
     list-style none
