--- a/web_external/Viewer/style.styl
+++ b/web_external/Viewer/style.styl
@@ -10,12 +10,12 @@
       flex 1
       display flex
       flex-direction column
-    
+
       .video
         flex 1
 
   .control
-    padding 10px
+    padding-top 3px
 
     .buttons
       width auto
@@ -41,3 +41,6 @@
 
       .slider
         flex 1
+
+      .spinbox
+        margin-left 4px
