--- a/web_external/Viewer/style.styl
+++ b/web_external/Viewer/style.styl
@@ -26,7 +26,7 @@
     padding-top 3px
 
     .buttons
-      width auto
+      max-width 350px
       margin 0 auto
       display flex
       height 30px
