Update styles based on review

--- a/web_external/Viewer/style.styl
+++ b/web_external/Viewer/style.styl
@@ -17,10 +17,10 @@
 
   .no-annotation-message
     position absolute
-    top 4px
-    left 4px
+    top 3px
+    right 3px
     z-index 1
-    padding 5px
+    padding 0 0.5em
   
   .control
     padding-top 3px
