--- a/web_external/InfoView/style.styl
+++ b/web_external/InfoView/style.styl
@@ -8,6 +8,7 @@
 
   .panel-body
     flex 1
+    position relative
 
   ul
     &.geometry
@@ -22,3 +23,10 @@
 
       &.activity
         margin-bottom 2px
+
+  .clear-message
+    position absolute
+    bottom 0
+    left 0
+    right 0
+    text-align center
