--- a/web_external/Viewer/style.styl
+++ b/web_external/Viewer/style.styl
@@ -21,7 +21,11 @@
     right 3px
     z-index 1
     padding 0 0.5em
-  
+    border-radius 0
+    background rgba(255, 224, 224, 0.5)
+    border 1px solid rgba(160, 80, 80, 0.5)
+    color #400
+
   .control
     padding-top 3px
 
