Use flex layout for info pane
Change layout rules to use flex to position the hint at the bottom of
the info pane rather than absolute position. This makes it possible to
size the main content to the remaining space, which will also make it
possible to add proper scrolling behavior.

--- a/web_external/InfoView/style.styl
+++ b/web_external/InfoView/style.styl
@@ -8,9 +8,12 @@
 
   .panel-body
     flex 1
-    position relative
+    display flex
+    flex-direction column
 
   ul
+    flex 1
+
     &.geometry
       padding-left 20px
 
@@ -25,9 +28,7 @@
         margin-bottom 2px
 
   .clear-message
-    position absolute
-    bottom 0
-    left 0
-    right 0
+    align-self flex-end
+    height auto
     text-align center
     opacity 0.6
