Add path location; Add filter for non-annotated clip; Add loading indicator;

--- a/web_external/ClipExplorer/style.styl
+++ b/web_external/ClipExplorer/style.styl
@@ -2,11 +2,24 @@
   .checkbox.show-only-annotated-clip
     margin-bottom -10px
 
+  .back-button
+    position relative
+    left 5px
+
+  .location
+    .divider
+      margin 0 3px
+
+  .folders-container
+    margin-top 5px
+    margin-bottom 5px
+
   ul.folders
     list-style none
     padding 0
     max-height 60vh
     overflow auto
+    margin-left -5px
 
     li
       cursor pointer
@@ -24,3 +37,6 @@
       .annotated-icon
         font-size 12px
         margin-left 4px
+
+      .image-container
+        margin-top 3px
