--- a/web_external/HeaderBar/style.styl
+++ b/web_external/HeaderBar/style.styl
@@ -1,73 +1,24 @@
 .v-header-wrapper
-  display flex
-  width 100%
-  height $headerHeight
-  background-color $headerColor
-  transition background-color 0.4s ease-in-out
   padding 1px
 
-  .v-logo-wrapper
-    display flex
-    align-items center
-    justify-content flex-start
-    width $leftColWidth
-    padding-left 2em
-    padding-right 2em
-    background-color #fff
-    img
-      height 2em
+  .load-button-wrapper
+    float left
+
+  .clip-name
+    float left
+    padding 4px 0
+    margin-left 10px
 
   a, a:visited
     color #333
     &:hover
       text-decoration underline !important
 
-  .v-login-link-wrapper
-    font-size 16px
-
-  .v-user-link-wrapper
-    display inline-block
-
-  .v-portrait-wrapper
-    border-radius 50%
-    display inline-block
-    margin-right 10px
-    height $portraitHeight
-    width $portraitHeight
-    background-size $portraitHeight $portraitHeight
-
   .v-current-user-wrapper
-    display flex
-    flex 1
-    justify-content flex-end
+    float right
     padding 0 1em
-    color #fff
 
-  .v-current-user-text
-    display: flex
-    align-items center
-
-  .v-icons-wrapper
-    display inline
-    line-height $headerHeight
-    font-size 21px
-
-    &>a
-      color #444
-      margin-right 4px
-      border 1px solid transparent
-      border-radius 3px
-      padding 3px
-
-      &:hover
-        color #449
-        border 1px solid #e2e2e2
-        background linear-gradient(top, white 60%, #f6f6f6 100%)
-
-      &:active
-        background linear-gradient(bottom, white 60%, #f6f6f6 100%)
-
-  div.toolbutton
+  .toolbutton
     a
     button.btn
       display inline-block
