Fix all kind of linting error
Temporarily disable react/prop-types because component props will change greatly when redux is introduced.
Disable promise/no-nesting because it's so limiting with it and I can't see the value of it to code around it.

--- a/web_external/templates/widget/nativeVideoWidget.pug
+++ b/web_external/templates/widget/nativeVideoWidget.pug
@@ -1,2 +1,2 @@
 .v-video-widget
-  video.video-preview(assume-no-change, class={'full-width':modalMode}, src=`${src}`)
+  video.video-preview(assume-no-change, class={'full-width':modalMode}, src=src)
