--- a/web_external/Viewer/style.styl
+++ b/web_external/Viewer/style.styl
@@ -61,3 +61,9 @@
 
       .spinbox
         margin-left 4px
+
+  .v-viewer-wrapper.geojs-map.highlight-focus
+    outline none
+
+    &:after
+      display none
