Add initial geom export to kpf feature

--- a/web_external/HeaderBar/style.styl
+++ b/web_external/HeaderBar/style.styl
@@ -1,8 +1,11 @@
 .v-header-wrapper
   padding 1px
 
-  .load-button-wrapper
+  .button-wrapper
     float left
+
+    button
+      margin-right 10px
 
   .clip-name
     float left
