Introduce keyboard shortcut to the project and add few keyboard shortcut or placeholders

--- a/web_external/Viewer/style.styl
+++ b/web_external/Viewer/style.styl
@@ -62,8 +62,5 @@
       .spinbox
         margin-left 4px
 
-  .v-viewer-wrapper.geojs-map.highlight-focus
+  .v-viewer-wrapper.geojs-map:focus
     outline none
-
-    &:after
-      display none
