Implement Track info editing

--- a/web_external/TrackInfo/style.styl
+++ b/web_external/TrackInfo/style.styl
@@ -1,8 +1,12 @@
 .trackinfo-widget
-  height 100%
+  position absolute
+  top 0
+  bottom 0
+  left 0
+  right 0
+  padding 0 8px
 
   form
-    padding 0 8px
 
     fieldset
       legend
