Implement initial version of Activity info editing features

--- a/web_external/IndexView/style.styl
+++ b/web_external/IndexView/style.styl
@@ -17,6 +17,7 @@ fieldset
 .form-horizontal .form-group-xs .control-label 
   padding-top 3px
   font-size 12px
+  padding-right 0
 
 .form-group-xs .form-control-static
   height 23px
