--- a/web_external/Viewer/style.styl
+++ b/web_external/Viewer/style.styl
@@ -15,6 +15,10 @@
       .video
         flex 1
 
+      .control-bar
+        button
+          margin-right 5px
+
   .message
     position absolute
     top 3px
