Implement creating activity with a new widget
Update the activity types list
Apply other related fix and improvements

--- a/web_external/IndexView/style.styl
+++ b/web_external/IndexView/style.styl
@@ -14,10 +14,11 @@ fieldset
   line-height 1.5
 
 
-.form-horizontal .form-group-xs .control-label 
-  padding-top 3px
-  font-size 12px
-  padding-right 0
+.form-horizontal .form-group-xs 
+  .control-label 
+    padding-top 3px
+    font-size 12px
+    padding-right 0
 
 .form-group-xs .form-control-static
   height 23px
@@ -38,7 +39,7 @@ fieldset
   flex-flow row
 
   .left-sidebar
-    width 300px
+    width 280px
     padding 1px
     display flex
     flex-direction column
@@ -49,12 +50,14 @@ fieldset
     .objectinfo-container
       height 300px
 
+  .right-sidebar
+    width 280px
+    padding 1px
+    display flex
+    flex-direction column
+
   .main
     flex 1
-    padding 1px
-
-  .right-sidebar
-    width 240px
     padding 1px
 
 .panel
