Add an option to forcefully re-import from KPF when opening a clip

--- a/web_external/ClipExplorer/style.styl
+++ b/web_external/ClipExplorer/style.styl
@@ -13,6 +13,9 @@
   .folders-container
     margin-top 5px
     margin-bottom 5px
+  
+  .reimport-container
+    margin-bottom 0
 
   ul.folders
     list-style none
