--- a/web_external/IndexView/style.styl
+++ b/web_external/IndexView/style.styl
@@ -13,6 +13,8 @@ fieldset
   font-size 12px
   line-height 1.5
 
+.modal-footer
+  margin-top 0
 
 .form-horizontal .form-group-xs 
   .control-label 
