Implement Show all/Hide all button for track and activity pane to replace checkbox style selection

--- a/web_external/TreeView/ActivityPane/style.styl
+++ b/web_external/TreeView/ActivityPane/style.styl
@@ -1,9 +1,14 @@
 .v-activity-pane
-  padding-left 20px
+  height 100%
+  display flex
+  flex-direction column
 
   ul
     list-style none
-    padding-left 20px
+    flex 1
+    overflow-y auto
+    margin-bottom 5px
+    padding-left 25px
 
   div.checkbox
     margin-top 0
@@ -11,3 +16,9 @@
 
     &.selected
       background #efefef
+
+  .selection-buttons
+    width 100%
+
+    button
+      width 50%
