--- a/web_external/IndexView/style.styl
+++ b/web_external/IndexView/style.styl
@@ -16,7 +16,7 @@ fieldset
 .modal-footer
   margin-top 0
 
-.form-horizontal .form-group-xs 
+.form-group-xs 
   .control-label 
     padding-top 3px
     font-size 12px
