Change behavior of InterpolationWidget to allow optimize by a whole track or by a set of geometries

--- a/web_external/ActivityCreator/style.styl
+++ b/web_external/ActivityCreator/style.styl
@@ -30,11 +30,11 @@
     flex 1
 
     li
-      .remove-button
+      button
         visibility hidden
 
       &:hover
-        .remove-button
+        button
           visibility visible
 
   .no-padding[class^="col-xs-"]
