--- a/web_external/IndexView/style.styl
+++ b/web_external/IndexView/style.styl
@@ -99,3 +99,9 @@ fieldset
     li.active > a
         background none
         border-radius 3px
+
+.font-sm
+  font-size 12px
+
+.bold
+  font-weight bold
