Rename Geometry to Detection in both source code and UI

--- a/web_external/InterpolationWidget/style.styl
+++ b/web_external/InterpolationWidget/style.styl
@@ -11,15 +11,15 @@
     flex-direction column
     padding-top 10px
 
-    .geometries-label
+    .detections-label
       margin-top 10px
 
-    .geometries-container
+    .detections-container
       flex 1
       overflow-y auto
       overflow-x hidden
 
-      .geometry
+      .detection
         button
           visibility hidden
 
