Add a view mode to activity editor

--- a/web_external/ActivityEditor/style.styl
+++ b/web_external/ActivityEditor/style.styl
@@ -31,11 +31,12 @@
 
     li
       button
-        visibility hidden
+        display none
+        height 0
 
       &:hover
         button
-          visibility visible
+          display block
 
   .no-padding[class^="col-xs-"]
     padding 0
