--- a/web_external/IndexView/style.styl
+++ b/web_external/IndexView/style.styl
@@ -105,3 +105,15 @@ fieldset
 
 .bold
   font-weight bold
+
+.no-padding
+  padding 0
+
+.no-padding-left
+  padding-left 0
+
+.no-margin
+  margin-top 0
+  margin-bottom 0
+  margin-right 0
+  margin-left 0
