--- a/web_external/ActivityWidget/style.styl
+++ b/web_external/ActivityWidget/style.styl
@@ -17,39 +17,42 @@
 
   .frame-button-container
     text-align right
-  
-  .tracks-header
-    font-size 12px
-    font-weight bold
-
-  .track-item
-    margin-bottom 2px
-    margin-left 10px
 
   .form-group
     margin-bottom 2px
+  
+  .tracks
+    margin-bottom 10px
+    margin-left 10px
 
-  ul.tracks
-    list-style none
-    padding 0
-    overflow-y auto
-    overflow-x hidden
-    flex 1
+    .tracks-header
+      font-size 12px
+      font-weight bold
+      margin-bottom 2px
 
-    li
-      .form-group
-        margin-right 0
+    ul
+      list-style none
+      padding 0
+      overflow-y auto
+      overflow-x hidden
+      flex 1
+      margin-bottom 0
 
-        button
-          display none
+      li
+        .form-group
+          margin-right 0
+          margin-left 0
 
-        &:hover
           button
-            display block
+            display none
 
-        .range
-          padding-left 0
-          padding-right 5px
+          &:hover
+            button
+              display block
+
+          .range
+            padding-left 0
+            padding-right 5px
 
   .bottom-row
     text-align right
