Remove old activity info windows because their functionality has been duplicated by ActivityWidget
Move TrackWidget(TrackInfo) to the right side bar; Move select all/hide all buttons to the top of track and activity panel

--- a/web_external/TreeView/ActivityPane/style.styl
+++ b/web_external/TreeView/ActivityPane/style.styl
@@ -7,7 +7,6 @@
     list-style none
     flex 1
     overflow-y auto
-    margin-bottom 5px
     padding-left 25px
 
   div.checkbox
@@ -19,6 +18,8 @@
 
   .selection-buttons
     width 100%
+    margin-top 2px
+    margin-bottom 5px
 
     button
       width 50%
