--- a/web_external/ActivityWidget/style.styl
+++ b/web_external/ActivityWidget/style.styl
@@ -1,11 +1,14 @@
-.v-activity-creator
+.v-activity-widget
   flex 1
 
   .panel
+    height 100%
     display flex
     flex-direction column
 
   .panel-body
+    position relative
+    height 100%
     flex 1 1 0
     display flex
     flex-direction column
