--- a/web_external/InfoView/style.styl
+++ b/web_external/InfoView/style.styl
@@ -2,11 +2,14 @@
   flex 1
 
   .panel
+    height 100%
     display flex
     flex-direction column
 
   .panel-body
     flex 1 1 0
+    position relative
+    height 100%
     display flex
     flex-direction column
     overflow-y hidden
