--- a/web_external/ActivityWidget/style.styl
+++ b/web_external/ActivityWidget/style.styl
@@ -18,8 +18,8 @@
       display flex
       flex-direction column
 
-  .frame-button-container
-    text-align right
+  .frame-button-container button
+    width 100%
 
   .form-group
     margin-bottom 2px
@@ -36,8 +36,7 @@
     ul
       list-style none
       padding 0
-      overflow-y auto
-      overflow-x hidden
+      overflow-y visible
       flex 1
       margin-bottom 0
 
@@ -46,16 +45,22 @@
           margin-right 0
           margin-left 0
 
-          button
-            display none
-
-          &:hover
-            button
-              display block
-
           .range
             padding-left 0
             padding-right 5px
+
+            div
+              position relative
+
+              button
+                display none
+                position absolute
+                z-index 1
+                width 100%
+
+              &:hover
+                button
+                  display block
 
   .bottom-row
     text-align right
