--- a/web_external/ActivityWidget/style.styl
+++ b/web_external/ActivityWidget/style.styl
@@ -13,6 +13,8 @@
     display flex
     flex-direction column
     padding-top 10px
+    overflow-x hidden
+    overflow-y auto
 
     form.form-horizontal
       display flex
