--- a/web_external/InterpolationWidget/style.styl
+++ b/web_external/InterpolationWidget/style.styl
@@ -5,11 +5,13 @@
     height 100%
     display flex
     flex-direction column
+    margin-bottom 0
 
   .panel-body
     position relative
-    height 100%
     flex 1 1 0
+    overflow-x hidden
+    overflow-y auto
     display flex
     flex-direction column
     padding-top 10px
