--- a/web_external/TrackWidget/style.styl
+++ b/web_external/TrackWidget/style.styl
@@ -11,3 +11,8 @@
     position relative
     height 100%
     flex 1
+    overflow-x hidden
+    overflow-y auto
+
+  .bottom-row
+    text-align right
