Implement Detection Widget which allows view and edit a detection

--- a/web_external/IndexView/style.styl
+++ b/web_external/IndexView/style.styl
@@ -21,6 +21,7 @@ fieldset
     padding-top 3px
     font-size 12px
     padding-right 0
+    padding-left 0
 
 .form-group-xs .form-control-static
   height 23px
