Improve interpolation widget to support filter by detection source type and GUI

--- a/web_external/IndexView/style.styl
+++ b/web_external/IndexView/style.styl
@@ -106,9 +106,15 @@ fieldset
 
 .no-padding
   padding 0
+  white-space nowrap
 
 .no-padding-left
   padding-left 0
+  white-space nowrap
+
+.no-padding-right
+  padding-right 0
+  white-space nowrap
 
 .no-margin
   margin-top 0
