--- a/web_external/InterpolationWidget/style.styl
+++ b/web_external/InterpolationWidget/style.styl
@@ -24,13 +24,6 @@
       overflow-y auto
       overflow-x hidden
 
-      .detection
-        button
-          visibility hidden
-
-        &:hover
-          button
-            visibility visible
-
   .bottom-row
     text-align right
+    margin-top 5px
