--- a/web_external/IndexView/style.styl
+++ b/web_external/IndexView/style.styl
@@ -98,6 +98,15 @@ fieldset
         background none
         border-radius 3px
 
+.panel.simple-panel
+  margin-bottom 0
+  display flex
+  flex-direction column
+  height 100%
+
+  .panel-body
+    flex 1
+
 .font-sm
   font-size 12px
 
