--- a/web_external/Instruction/style.styl
+++ b/web_external/Instruction/style.styl
@@ -1,7 +1,10 @@
 .b-instruction
-    overflow-y auto
-    padding 3px
+  overflow-y auto
+  padding 3px
 
-    img.example
-        width 800px
-        border 2px solid black
+  img.example
+      width 800px
+      border 2px solid black
+
+  video
+    width 100%
