Add content to instruction; other improvements;

--- a/web_external/Instruction/style.styl
+++ b/web_external/Instruction/style.styl
@@ -2,9 +2,8 @@
   overflow-y auto
   padding 3px
 
-  img.example
-      width 800px
-      border 2px solid black
+  .dodont
+    width 85%
 
   video
     width 100%
